--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="main">
-    <div class="row">
+    <div>
       <div class="col-lg-12">
         <h1>Aaron Kendrick</h1>
         <p>Software Developer</p>
