--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
 								Software Developer with experience developing, testing, and deploying web and desktop applications.  Great problem solving and critical thinking skills. Good knowledge of object-oriented programming, data structures/algorithms, and common design patterns.  Passionate about learning new things and sharing what I know with others.  My objective is to find a challenging position where I can contribute to delivering world class solutions.
 							</p>
 						</div> 
-					</div><!--// .yui-gf -->
+					</div>// .yui-gf -->
 
 					<div class="yui-gf">
 
@@ -62,9 +62,26 @@
 						<div class="yui-u">
 
 							<div class="job">
+								<h2 id="sv">Chevron</h2><span>Oil & Gas</span>
+								<h3>Software Developer (Contract)</h3>
+								<h4>December 2019 - February 2020</h4>
+								<br />
+								<h5><b>Drilling and Completions Systems Lab Team</b></h5>
+								<i>Worked as a developer within a multidisciplinary team modeling D&C operations as a computational knowledge graph using the Maana platform
+								</i>
+								<!-- <br></br> -->
+								<ul>
+									<li>Developed and deployed a web application (React/Styled Components/Azure) using GraphQL to query MaanaQ / 
+										Also implemented Auth0 Universal Login authentication
+									</li>
+									<li>Developed and deployed Node.js micro-services mapping data from various data sources/formats to a specified GraphQL schema</li>
+								</ul>
+							</div>
+
+							<div class="job">
 								<h2 id="sv">The Home Depot</h2><span>E-Commerce</span>
 								<h3>Software Developer</h3>
-								<h4>2018 - Present</h4>
+								<h4>October 2018 - November 2019</h4>
 								<br />
 								<h5><b>Measure and Install (MANDI)</b></h5>
 								<i>Developing Software to facilitate Home Depot's professional measurement and installation program</i>
@@ -83,7 +100,7 @@
 							<div class="job last">
 								<h2 id="sv">SmartVault</h2><span>Cloud document management</span>
 								<h3>Software Developer</h3>
-								<h4>2014 - 2018</h4>
+								<h4>August 2014 - May 2018</h4>
 								<br />
 								<h5><b>Product Team</b></h5>
 								<i>Part of a team of developers practicing Agile/SCRUM methodology with 2 week sprints and monthly releases</i>
