--- a/resume.html
+++ b/resume.html
@@ -90,9 +90,9 @@
 									<li>Delivered a greenfield .NET Core back-end replacing HD's existing system supporting shopping for/purchasing MANDI services / Also
 										performed extensive refactoring of the blinds.com web UI (React/Redux/Styled Components) to accompany the new back-end
 									</li>
-									<li>Migrated HD's MANDI job system from SQLServer/REST API to Firebase Firestore/GraphQL API increasing system performance and giving HD the 
+									<li>Migrated HD's MANDI job system from SQLServer/RPC API to Firebase Firestore/GraphQL API increasing system performance and giving HD the 
 										confidence to extend the MANDI program coverage from 20% to 60% of the United States</li>
-									<li>Built a NodeJS/Express REST API used by 3rd party MANDI Service Providers to read/write HD MANDI job data from their software</li>
+									<li>Built a NodeJS/Express API used by 3rd party MANDI Service Providers to read/write HD MANDI job data from their software</li>
 									<li>Deployed a machine learning model using AWS Sagemaker/Lambda/API Gateway whose inference data helps significantly reduce the MANDI process cylce time</li>
 								</ul>
 							</div>
@@ -141,7 +141,7 @@
 								<li>GIT/Mercurial</li>
 								<li>Docker</li>
 								<li>AWS</li>
-								<li class="last">GraphQL/REST</li>
+								<li class="last">GraphQL/REST/RPC</li>
 							</ul>
 						</div>
 					</div>
