--- a/resume.html
+++ b/resume.html
@@ -42,17 +42,6 @@
 			<div id="yui-main">
 				<div class="yui-b">
 
-					<!--<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Profile</h2>
-						</div>
-						<div class="yui-u">
-							<p class="enlarge">
-								Software Developer with experience developing, testing, and deploying web and desktop applications.  Great problem solving and critical thinking skills. Good knowledge of object-oriented programming, data structures/algorithms, and common design patterns.  Passionate about learning new things and sharing what I know with others.  My objective is to find a challenging position where I can contribute to delivering world class solutions.
-							</p>
-						</div> 
-					</div>// .yui-gf -->
-
 					<div class="yui-gf">
 
 						<div class="yui-u first">
@@ -61,6 +50,22 @@
 
 						<div class="yui-u">
 
+							<div class="job">
+								<h2 id="sv">Schumacher Clinical Partners</h2><span>Health Care</span>
+								<h3>Software Developer</h3>
+								<h4>September 2020 - Current</h4>
+								<br />
+								<h5><b>Web Services Team</b></h5>
+								<i>Developing SCP's provider portal software which encompasses scheduling, reporting, training, medical coding/billing, provider credentialing and more.</i>
+								<!-- <br></br> -->
+								<ul>
+									<li>Rebuilt SCP's Medical Director reporting system migrating from a third party form creation/entry service (Jotform) to a custom solution using React-Hook-Forms and a GraphQL/Postgres back-end.  The system includes an approval workflow with various form states, notifications and file-uploads/downloads (AWS S3).</li>
+									<li>Built a C#/.NET console application which authenticates with / queries the Workday Adaptive Planning API to pull account information for SCP's Business Intelligence team.  Also utilized the .NET XML API to transform the API response to be consumed by BI.</li>
+									<li>Developed custom Excel Workbook sheets with color coded Medical Director report status data using ExcelJS along with the ability to download them via SCP's provider portal.</li>
+									<li>Built several pages used by providers to view facility/report data with extensive filtering capabilities using React with accompanying GraphQL resolvers/types.</li>
+								</ul>
+							</div>
+							
 							<div class="job">
 								<h2 id="sv">Chevron</h2><span>Oil & Gas</span>
 								<h3>Software Developer (Contract)</h3>
@@ -98,7 +103,7 @@
 							</div>
 
 							<div class="job last">
-								<h2 id="sv">SmartVault</h2><span>Cloud document management</span>
+								<h2 id="sv">SmartVault</h2><span>Cloud Document Management</span>
 								<h3>Software Developer</h3>
 								<h4>August 2014 - May 2018</h4>
 								<br />
@@ -132,7 +137,7 @@
 
 							<ul class="talent">
 								<li>C#/.NET</li>
-								<li>SQLServer/MySQL</li>
+								<li>SQLServer/MySQL/Postgres</li>
 								<li>Jest/NUnit</li>
 								<li class="last">Firebase Firestore</li>
 							</ul>
