--- a/resume.html
+++ b/resume.html
@@ -51,18 +51,34 @@
 						<div class="yui-u">
 
 							<div class="job">
-								<h2 id="sv">Schumacher Clinical Partners</h2><span>Health Care</span>
+								<h2 id="sv">Identity Automation</h2><span>Digital Identity Management</span>
 								<h3>Software Developer</h3>
-								<h4>September 2020 - Current</h4>
+								<h4>November 2021 - February 2023</h4>
 								<br />
-								<h5><b>Web Services Team</b></h5>
-								<i>Developing SCP's provider portal software which encompasses scheduling, reporting, training, medical coding/billing, provider credentialing and more.</i>
+								<h5><b>Product Team</b></h5>
+								<i>Fullstack development of RapidIdentity, Identity Automation's flagship IAM platform</i>
 								<!-- <br></br> -->
 								<ul>
-									<li>Rebuilt SCP's Medical Director reporting system migrating from a third party form creation/entry service (Jotform) to a custom solution using React-Hook-Forms and a GraphQL/Postgres back-end.  The system includes an approval workflow with various form states, notifications and file-uploads/downloads (AWS S3).</li>
-									<li>Built a C#/.NET console application which authenticates with / queries the Workday Adaptive Planning API to pull account information for SCP's Business Intelligence team.  Also utilized the .NET XML API to transform the API response to be consumed by BI.</li>
-									<li>Developed custom Excel Workbook sheets with color coded Medical Director report status data using ExcelJS along with the ability to download them via SCP's provider portal.</li>
-									<li>Built several pages used by providers to view facility/report data with extensive filtering capabilities using React with accompanying GraphQL resolvers/types.</li>
+									<li>Developed Java REST API's (JAX-RS) according to Google's API Design Guide</li>
+									<li>Performed root cause analysis and applied solutions for production issues in the Rapid Identity product</li>
+									<li>Developed/deployed greenfield JavaScript/Ember Octane SPA for IA's new IDHub product.  Also supported legacy Ember apps</li>
+									<li>Automated back-end infrastructure provisioning for the IDHub project using Terraform and setup CI/CD pipelines</li>
+								</ul>
+							</div>
+
+							<div class="job">
+								<h2 id="sv">Schumacher Clinical Partners</h2><span>Health Care</span>
+								<h3>Software Developer (Contract)</h3>
+								<h4>September 2020 - October 2021</h4>
+								<br />
+								<h5><b>Web Services Team</b></h5>
+								<i>Developing SCP's provider portal software which encompasses scheduling, reporting, training, medical coding/billing, provider credentialing and more</i>
+								<!-- <br></br> -->
+								<ul>
+									<li>Rebuilt SCP's Medical Director reporting system migrating from a third party form creation/entry service (Jotform) to a custom solution using React-Hook-Forms and a GraphQL/Postgres back-end.  The system includes an approval workflow with various form states, notifications and file-uploads/downloads (AWS S3)</li>
+									<li>Built a C#/.NET console application which authenticates with / queries the Workday Adaptive Planning API to pull account information for SCP's Business Intelligence team.  Also utilized the .NET XML API to transform the API response to be consumed by BI</li>
+									<li>Developed custom Excel Workbook sheets with color coded Medical Director report status data using ExcelJS along with the ability to download them via SCP's provider portal</li>
+									<li>Built several pages used by providers to view facility/report data with extensive filtering capabilities using React with accompanying GraphQL resolvers/types</li>
 								</ul>
 							</div>
 							
@@ -129,23 +145,26 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>HTML/CSS</li>
+								<li>HTML/CSS/SASS</li>
 								<li>Javascript/TypeScript</li>
 								<li>React/Redux</li>
+								<li>Ember.js</li>
 								<li class="last">Node.JS/Express</li>
 							</ul>
 
 							<ul class="talent">
 								<li>C#/.NET</li>
+								<li>Java/Spring</li>
+								<li>EntityFramework/Hibernate</li>
 								<li>SQLServer/MySQL/Postgres</li>
-								<li>Jest/NUnit</li>
-								<li class="last">Firebase Firestore</li>
+								<li class="last">Jest/NUnit/JUnit</li>
 							</ul>
 
 							<ul class="talent">
-								<li>GIT/Mercurial</li>
+								<li>GIT/Gitlab/Github</li>
 								<li>Docker</li>
-								<li>AWS</li>
+								<li>AWS/Azure</li>
+								<li>Terraform</li>
 								<li class="last">GraphQL/REST/RPC</li>
 							</ul>
 						</div>
